@@ -1,3 +1,7 @@
+CR-2008-02-27-0: Bugfix:    using exed_nodes instead of exed_hosts for
+                            hedeby and additional cluster procedures
+                 Review:    RD
+
 RD-2008-02-27-0: Enhancem:  added test for ENABLE_RESCHEDULE_KILL
                             and ENABLE_RESCHEDULE_SLAVE
                  Review:    JG
